--- a/comments/src/main/res/layout/fragment_comments.xml
+++ b/comments/src/main/res/layout/fragment_comments.xml
@@ -24,6 +24,7 @@
         android:id="@+id/commentsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/replyingToLay"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
