--- a/comments/src/main/res/layout/text_comment_layout.xml
+++ b/comments/src/main/res/layout/text_comment_layout.xml
@@ -37,13 +37,13 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingHorizontal="4dp">
+            android:paddingHorizontal="4dp"
+            android:paddingVertical="4dp">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/profileNameTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
                 android:gravity="start"
                 android:text="Profile Name"
                 android:textColor="#000000"
@@ -89,8 +89,8 @@
 
                 <ImageView
                     android:id="@+id/likeIv"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_marginHorizontal="5dp"
                     android:layout_marginTop="12dp"
                     android:src="@drawable/unliked_icon"
@@ -103,7 +103,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1111"
-                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/likeIv" />
@@ -142,34 +141,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/actionBtnLay" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/viewRepliesLay"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="4dp"
-                app:layout_constraintTop_toBottomOf="@id/repliesRv">
-
-                <com.google.android.material.divider.MaterialDivider
-                    android:id="@+id/viewRepliesDivider"
-                    android:layout_width="40dp"
-                    android:layout_height="1dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-
-                <TextView
-                    android:id="@+id/viewRepliesTv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/viewRepliesDivider"/>
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
